mutex - update swagger, added mutex rest and mutex client
